根据需求修改对应的余料算法，增加备料尺寸和精截尺寸的显示